--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "3d-bin-packing": "^1.1.3",
     "@types/lodash": "^4.14.175",
     "lodash": "^4.17.21",
+    "samchon-framework": "^2.1.4",
     "uuid": "^8.3.2"
   }
 }
